@@ -1,6 +1,6 @@
 package eis.iilang;
 
-import java.util.LinkedList;
+import java.util.List;
 
 /**
  * An action that can be performed by an agent through its associated
@@ -45,34 +45,29 @@ public class Action extends DataContainer {
 	 * @param parameters
 	 *            action parameters
 	 */
-	public Action(String name, LinkedList<Parameter> parameters) {
+	public Action(String name, List<Parameter> parameters) {
 		super(name, parameters);
 	}
 
 	@Override
 	protected String toXML(int depth) {
-
 		String xml = "";
 
 		xml += indent(depth) + "<action name=\"" + name + "\">" + "\n";
 
 		for (Parameter p : params) {
-
 			xml += indent(depth + 1) + "<actionParameter>" + "\n";
 			xml += p.toXML(depth + 2);
 			xml += indent(depth + 1) + "</actionParameter>" + "\n";
-
 		}
 
 		xml += indent(depth) + "</action>" + "\n";
 
 		return xml;
-
 	}
 
 	@Override
 	public String toProlog() {
-
 		String ret = "";
 
 		ret += name;
@@ -80,7 +75,7 @@ public class Action extends DataContainer {
 		if (params.isEmpty() == false) {
 			ret += "(";
 
-			ret += params.getFirst().toProlog();
+			ret += params.get(0).toProlog();
 
 			for (int a = 1; a < params.size(); a++) {
 				Parameter p = params.get(a);
@@ -91,23 +86,19 @@ public class Action extends DataContainer {
 		}
 
 		return ret;
-
 	}
 
 	@Override
 	public Object clone() {
-
 		Action ret = new Action(this.name, this.getClonedParameters());
 
 		ret.setSource(this.source);
 
 		return ret;
-
 	}
 
 	@Override
 	public boolean equals(Object obj) {
-
 		if (obj == null)
 			return false;
 		if (obj == this)
@@ -117,21 +108,15 @@ public class Action extends DataContainer {
 			return false;
 
 		return super.equals(obj);
-
 	}
 
 	@Override
 	public Object accept(IILObjectVisitor visitor, Object object) {
-
 		return visitor.visit(this, object);
-
 	}
 
 	@Override
 	public void accept(IILVisitor visitor) {
-
 		visitor.visit(this);
-
 	}
-
 }
